Load Category, Load Ranking are created.

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_category"
         android:enabled="true"
-        android:iconTint="Category"
+        android:title="Category"
         android:icon="@drawable/ic_question_answer_black_24dp"
         app:showAsAction="ifRoom"
 
@@ -14,7 +14,7 @@
     <item
         android:id="@+id/action_ranking"
         android:enabled="true"
-        android:iconTint="Ranking"
+        android:title="Ranking"
         android:icon="@drawable/ic_star_black_24dp"
         app:showAsAction="ifRoom"
 
