--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -9,6 +9,7 @@
     tools:context=".StartActivity">
 
     <ImageView
+
         android:id="@+id/logo"
         android:src="@drawable/logo"
         android:layout_centerHorizontal="true"
@@ -19,6 +20,7 @@
     <android.support.v7.widget.CardView
         app:cardElevation="4dp"
         android:layout_centerInParent="true"
+        android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
