--- a/app/src/main/res/layout/activity_score_detail.xml
+++ b/app/src/main/res/layout/activity_score_detail.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RankingFragment">
+    tools:context=".RankingFragment"
+    android:background="@drawable/bg"
+    >
 
     <android.support.v7.widget.CardView
         android:id="@+id/title"
@@ -14,7 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/colorPrimaryDark"
-        app:cardElevation="4dp">
+        app:cardElevation="4dp"
+
+        >
 
 
         <LinearLayout
@@ -47,7 +51,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rankingList"
+        android:id="@+id/scoreList"
         android:layout_below="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
